change name of folder

--- a/ED_Pract4_2022/.project
+++ b/ED_Pract4_2022/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ED_Pract4_2022</name>
+	<name>02770733S_p4_2022</name>
 	<comment></comment>
 	<projects>
 	</projects>
